fixing a toggle alignment issues that is present on non-bootstrap websites

--- a/toggle-switchy.css
+++ b/toggle-switchy.css
@@ -1,7 +1,12 @@
 /*
-Toggle Switchy v1.13
-by Adam Culpepper | @adamculpepper
-https://toggleswitchy.com
+Project:	Toggle Switchy
+Version:	1.14
+Updated:	8/20/2020
+Author:		Adam Culpepper | @adamculpepper
+Website:	https://toggleswitchy.com
+Docs:		https://github.com/adamculpepper/toggle-switchy
+Issues:		https://github.com/adamculpepper/toggle-switchy/issues
+Releases:	https://github.com/adamculpepper/toggle-switchy/releases
 */
 
 /* Customizable styles */
@@ -34,7 +39,7 @@ CORE STYLES BELOW - NO TOUCHY
 .toggle-switchy > input[disabled] + .toggle {opacity:0.5;}
 .toggle-switchy > input[disabled] + .toggle:hover {cursor:not-allowed;}
 .toggle-switchy > input + .toggle {width:100%; height:100%; margin:0; cursor:pointer;}
-.toggle-switchy > input + .toggle > .switch {display:block; height:100%; position:absolute; right:0; z-index:3;}
+.toggle-switchy > input + .toggle > .switch {display:block; height:100%; position:absolute; right:0; z-index:3; box-sizing:border-box;}
 
 /* Labels */
 .toggle-switchy > input + .toggle:before,
